add master slave

--- a/doc/redis/command/主从同步流程.md
+++ b/doc/redis/command/主从同步流程.md
@@ -55,6 +55,7 @@ eof
 ```
 * 应答
 ```
++OK
 ```
 
 ## 5.上报类型
@@ -129,3 +130,143 @@ PING
 
 
 
+```
+*1
+$4
+PING
++PONG
+*3
+$8
+REPLCONF
+$14
+listening-port
+$5
+59804
++OK
+*3
+$8
+REPLCONF
+$10
+ip-address
+$9
+127.0.0.1
++OK
+*3
+$8
+REPLCONF
+$4
+capa
+$3
+eof
++OK
+*3
+$8
+REPLCONF
+$4
+capa
+$6
+psync2
++OK
+*3
+$5
+PSYNC
+$1
+?
+$2
+-2
+
++FULLRESYNC db72e13d181ffb0d9cc7384c175a2371a530248b 1
+$138
+REDIS0007.	redis-ver.3.2.12.
+redis-bits.@..ctime.Y.za..used-mem............a.a.......keya.valuea..keyb.valueb.....................y.".W^..*3
+$8
+REPLCONF
+$3
+ACK
+$1
+1
+
+*3
+$8
+REPLCONF
+$3
+ACK
+$1
+1
+*3
+$8
+REPLCONF
+$3
+ACK
+$1
+1
+*3
+$8
+REPLCONF
+$3
+ACK
+$1
+1
+*1
+$4
+PING
+*3
+$8
+REPLCONF
+$3
+ACK
+$2
+15
+
+
+*3
+$8
+REPLCONF
+$3
+ACK
+$2
+15
+*1
+$4
+PING
+
+*3
+$8
+REPLCONF
+$3
+ACK
+$2
+29
+
+*2
+$6
+SELECT
+$1
+0
+
+*3
+$3
+set
+$4
+keyc
+$6
+valuec
+
+*3
+$8
+REPLCONF
+$3
+ACK
+$2
+87
+
+*3
+$8
+REPLCONF
+$3
+ACK
+$2
+87
+
+
+```
