--- a/doc/redis/协议.md
+++ b/doc/redis/协议.md
@@ -1,18 +1,20 @@
-# 最详细的Redis通信协议规范
+# Redis通信协议规范
 
 ## 1.介绍
 
-Redis客户端使用RESP（Redis的序列化协议）协议与Redis的服务器端进行通信。 虽然该协议是专门为Redis设计的，但是该协议也可以用于其他 客户端-服务器
+Redis客户端使用RESP（Redis的序列化协议）协议与Redis的服务器端进行通信。
+ 虽然该协议是专门为Redis设计的，但是该协议也可以用于其他 客户端-服务器
 （Client-Server）软件项目。RESP是对以下几件事情的折中实现：
 
 * 1、实现简单
 * 2、解析快速
 * 3、人类可读
 
-RESP可以序列化不同的数据类型，如整数（integers），字符串（strings），数组（arrays）。 它还使用了一个特殊的类型来表示错误（errors）。
-请求以字符串数组的形式来表示要执行命令的参数从客户端发送到Redis服务器。Redis使用命令特有（command-specific）数据类型作为回复。
-
-RESP协议是二进制安全的，并且不需要处理从一个进程传输到另一个进程的块数据的大小， 因为它使用前缀长度（prefixed-length）的方式来传输块数据的。
+RESP可以序列化不同的数据类型，如整数（integers），字符串（strings），数组（arrays）。
+它还使用了一个特殊的类型来表示错误（errors）。
+请求以字符串数组的形式来表示要执行命令的参数从客户端发送到Redis服务器。
+Redis使用命令特有（command-specific）数据类型作为回复。
+RESP协议是二进制安全的，并且不需要处理从一个进程传输到另一个进程的块数据的大小，因为它使用前缀长度（prefixed-length）的方式来传输块数据的。
 
 注意：该文章所说的协议是仅用于 客户端 - 服务器（Client-Server）的通信。 Redis集群使用不同的二进制协议来交换节点之间的消息。
 
