--- a/doc/redis/command/主从同步流程.md
+++ b/doc/redis/command/主从同步流程.md
@@ -1,4 +1,5 @@
-## 1.保活
+## 1.主从同步流程
+### 1.1.保活
 * 请求
 ```
 *1
@@ -10,7 +11,7 @@ PING
 +PONG
 ```
 
-## 2.上报监听端口
+### 1.2.上报监听端口
 * 请求
 ```
 *3
@@ -26,7 +27,7 @@ $5
 +OK
 ```
 
-## 3.上报地址
+### 1.3.上报地址
 * 请求
 ```
 *3
@@ -42,7 +43,7 @@ $9
 +OK
 ```
 
-## 4.上报信息
+### 1.4.上报信息
 * 请求
 ```
 *3
@@ -58,7 +59,7 @@ eof
 +OK
 ```
 
-## 5.上报类型
+### 1.55.上报类型
 * 请求
 ```
 *3
@@ -74,7 +75,7 @@ psync2
 +OK
 ```
 
-## 6.上报同步时间戳
+### 1.6.上报同步时间戳
 * 请求
 ```
 *3
@@ -85,7 +86,7 @@ $1
 $3
 218
 ```
-* 应答
+* 应答(全量)
 ```
 +FULLRESYNC 02e371bd4a31c072e356c2cb0446f7d42ef0ff38 4060
 $227
@@ -95,7 +96,19 @@ redis-bits.@..ctime.BE.`..used-mem. .....repl-stream-db....repl-id(02e371bd4a31c
 .O..5.P..
 ```
 
-## 7.上报信息
+* 应答(增量)
+
+```
+PSYNC
+$40
+49adee2ad3c3bc3a23a812ddbb2403725079718b
+$4
+4229
++CONTINUE
+
+```
+
+### 1.7.上报信息同步索引
 
 * 请求
 ```
@@ -121,15 +134,12 @@ ACK
 $4
 4060
 ```
-* 应答
-```
-*1
-$4
-PING
-```
 
 
 
+## 2.附录
+
+### 2.1 同步报文
 ```
 *1
 $4
@@ -272,9 +282,9 @@ $2
 ```
 
 
-```
-空包
+### 2.2 同步空包
 
+```
 *1
 $4
 PING
@@ -360,6 +370,7 @@ $1
 
 ```
 
+### 2.3 同步增量
 
 ```
 *1
