--- a/doc/redis/command/主从同步流程.md
+++ b/doc/redis/command/主从同步流程.md
@@ -135,7 +135,27 @@ $4
 4060
 ```
 
+```
+REPLCONF
+$3
+ACK
+$4
+5960
+*3
+$8
+REPLCONF
+$3
+ACK
+$4
+5960
+*1
+$4
+PING
+```
 
+```
+processEvent,repl: 49adee2ad3c3bc3a23a812ddbb2403725079718b, offset: 5960
+```
 
 ## 2.附录
 
